# std-mlx-audio

./: .gitignore  LICENSE-THIRD-PARTY.md  README.md  VERIFICATION.md  pyproject.toml
docs/: DESIGN.md  STANDARD_ASR_FINDINGS.md
scripts/: verify_inference.py
src/std_mlx_audio/: __init__.py  _config.py  _metadata.py  _streaming.py  backends.py  engine.py  entrypoint.py  languages.py
tests/: __init__.py  conftest.py  test_backends.py  test_batch.py  test_entrypoints.py  test_helpers.py  test_routing.py  test_streaming.py
