# SPDX-FileCopyrightText: 2026 Standard Voice Contributors
# SPDX-License-Identifier: Apache-2.0

[project]
name = "std-mlx-audio"
version = "0.1.0"
description = "Standard ASR engine plugin for MLX (Apple Silicon) ASR models, headlined by Qwen3-ASR — one engine, many models via mlx-audio"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE-THIRD-PARTY.md"]
authors = [{ name = "Standard Voice Contributors" }]
keywords = [
    "asr",
    "speech-to-text",
    "mlx",
    "apple-silicon",
    "qwen3-asr",
    "whisper",
    "parakeet",
    "standard-asr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    # MLX is Apple-Silicon-only; the wheel installs anywhere but inference
    # requires a Metal-capable Mac (arm64).
    "Operating System :: MacOS",
    "Environment :: GPU",
]
dependencies = [
    # mlx-audio is the upstream MLX inference backend we adapt (MIT). It unifies
    # Qwen3-ASR, Whisper, Parakeet and ~20 other STT architectures behind one
    # load()/model.generate() API, which is exactly what lets a single engine
    # expose many models. The [stt] extra pulls sentencepiece (Qwen tokenizer).
    # mlx-audio depends on mlx/mlx-lm (Apple-Silicon-only) + transformers.
    # See docs/STANDARD_ASR_FINDINGS.md and docs/DESIGN.md for the
    # adapter-vs-vendor rationale.
    "mlx-audio[stt]>=0.4.4,<0.5",
    # NumPy is the zero-copy waveform interchange type with the standard layer.
    "numpy>=1.26.4",
    # NOTE: voxtral-mini-3b additionally needs the Mistral inference stack
    # (transformers' VoxtralProcessor pulls in librosa + mistral_common[audio] +
    # more) which mlx-audio does not declare and which does not converge cleanly;
    # we deliberately do NOT add those heavyweight deps for one batch-only model.
    # See VoxtralMini3B and VERIFICATION.md; use voxtral-realtime-4b instead.
    # The protocol this plugin implements. Pinned to the main branch until
    # standard-asr cuts its first PyPI release; swap to a version specifier
    # (>=0.1.0) at that point.
    "standard-asr @ git+https://github.com/standard-voice/standard_asr.git@main",
]

[project.urls]
Homepage = "https://github.com/standard-voice/std-mlx-audio"
"Standard ASR" = "https://github.com/standard-voice/standard_asr"
"mlx-audio (upstream)" = "https://github.com/Blaizzy/mlx-audio"

# One entry point per model preset (spec IC.7: model selection = entry-point
# preset, never an init `model` field). A single engine (engine_id "mlx-audio")
# exposes MULTIPLE models across MULTIPLE backend families — Qwen3-ASR (the
# headliner), Parakeet (word-timestamp specialist), and Whisper — so
# `standard-asr models list` enumerates every available model and discovery can
# read each one's class-level metadata WITHOUT instantiating (the factory return
# annotation is the CONCRETE engine class; adapting_engine.md "Publish").
[project.entry-points."standard_asr.models"]
"mlx-audio/qwen3-asr-0.6b" = "std_mlx_audio.entrypoint:create_qwen3_asr_0_6b"
"mlx-audio/qwen3-asr-1.7b" = "std_mlx_audio.entrypoint:create_qwen3_asr_1_7b"
"mlx-audio/parakeet-tdt-0.6b-v3" = "std_mlx_audio.entrypoint:create_parakeet_tdt_0_6b_v3"
"mlx-audio/whisper-large-v3-turbo" = "std_mlx_audio.entrypoint:create_whisper_large_v3_turbo"
"mlx-audio/whisper-tiny" = "std_mlx_audio.entrypoint:create_whisper_tiny"
"mlx-audio/nemotron-asr-streaming-0.6b" = "std_mlx_audio.entrypoint:create_nemotron_asr_streaming_0_6b"
"mlx-audio/sensevoice-small" = "std_mlx_audio.entrypoint:create_sensevoice_small"
"mlx-audio/cohere-asr" = "std_mlx_audio.entrypoint:create_cohere_asr"
"mlx-audio/fun-asr-nano" = "std_mlx_audio.entrypoint:create_fun_asr_nano"
"mlx-audio/voxtral-mini-3b" = "std_mlx_audio.entrypoint:create_voxtral_mini_3b"
"mlx-audio/canary-1b-v2" = "std_mlx_audio.entrypoint:create_canary_1b_v2"
"mlx-audio/qwen2-audio-7b" = "std_mlx_audio.entrypoint:create_qwen2_audio_7b"
"mlx-audio/glm-asr-nano" = "std_mlx_audio.entrypoint:create_glm_asr_nano"
"mlx-audio/granite-speech-1b" = "std_mlx_audio.entrypoint:create_granite_speech_1b"
"mlx-audio/granite-speech-nar-2b" = "std_mlx_audio.entrypoint:create_granite_speech_nar_2b"
"mlx-audio/vibevoice-asr" = "std_mlx_audio.entrypoint:create_vibevoice_asr"
"mlx-audio/moonshine-tiny" = "std_mlx_audio.entrypoint:create_moonshine_tiny"
"mlx-audio/mms-1b-all" = "std_mlx_audio.entrypoint:create_mms_1b_all"
"mlx-audio/fireredasr2-aed" = "std_mlx_audio.entrypoint:create_fireredasr2_aed"
"mlx-audio/voxtral-realtime-4b" = "std_mlx_audio.entrypoint:create_voxtral_realtime_4b"

# No `[tool.uv.sources]` override: `standard-asr` resolves straight from the
# `[project]` dependency above (GitHub `main`), so `uv pip install
# git+https://github.com/standard-voice/std-mlx-audio` works standalone — a local
# path override here would make uv try to resolve it from a non-existent
# subdirectory of the installed package.

[build-system]
requires = ["uv-build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "std_mlx_audio"

# Test/lint tooling. The unit suite injects a fake mlx_audio.stt loader via
# monkeypatch and NEVER downloads weights or runs MLX; the real-inference
# verification is a separate, opt-in script (scripts/verify_inference.py) gated
# on a downloaded model + Apple Silicon. See VERIFICATION.md.
[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--cov=std_mlx_audio",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]
testpaths = ["tests"]
asyncio_mode = "auto"
# Warnings-as-errors mirrors the core suite: our own deprecations/bugs fail.
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["std_mlx_audio"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF"]

[tool.ruff.lint.per-file-ignores]
# RUF012 flags mutable class-attribute defaults, but `_metadata.py` / `_config.py`
# declare *pydantic model fields* (BaseProperties / BaseConfig / ProviderParams
# subclasses), where `list[...] = [...]` is the correct pydantic idiom — pydantic
# deep-copies field defaults per instance, so there is no shared-mutable footgun.
# Ruff does not auto-detect these base classes as pydantic, hence the scoped ignore.
"src/std_mlx_audio/_metadata.py" = ["RUF012"]
"src/std_mlx_audio/_config.py" = ["RUF012"]
# Test fakes use class-level recording slots reset by the fixture (not pydantic);
# ClassVar annotations would only add noise to throwaway stubs.
"tests/conftest.py" = ["RUF012"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
